@@ -4,6 +4,7 @@ releases are sorted from youngest to oldest.
 version <next>:
 - fbdetile cpu based framebuffer layout detiling video filter
 - hwdownload framebuffer layout detiling (Intel tile-x|y|yf layouts)
+- hwcontext_drm detiles non linear layouts, if possible
 - kmsgrab GetFB2 format_modifier, if user doesnt specify
 - AudioToolbox output device
 - MacCaption demuxer
